# neural-edge

./: .env.example  .framework-manifest.json  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.json  pyproject.toml
.claude/: coffee-notes.md  landmines.md
.claude/hooks/: block-dangerous.sh  protect-files.sh  quality-gate.sh
.claude/references/: claude-cookbooks.md
.claude/rules/: autonomous-guardrails.md  ceo-cto-communication.md  document-driven-dev.md  engineering-philosophy.md  error-recovery.md  git-workflow.md  mcp-tools.md  production-safety.md  testing.md  worktree-autorun.md
.claude/skills/brainstorm/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/coffee-break/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/diagnose/: SKILL.md
.claude/skills/framework-sync/: SKILL.md
.claude/skills/hygiene/: SKILL.md
.claude/skills/investigate/: SKILL.md
docs/: BACKLOG.md  INCOMPLETE_FEATURES.md  PRODUCTION_READINESS_ROADMAP.md  README.md  TECHNICAL_DEBT.md
docs/active/: NEURAL_EDGE_PROJECT_SETUP.md  README.md
docs/guides/: DECISION_TREES.md  INCIDENT_RESPONSE.md  ORIENTATION.md  SKILLS_MANUAL.md  WORKFLOWS.md
memory/: MEMORY.md  intuitions.md  knowledge-map.md  observations.md
src/core/: api_client.py  risk.py
src/sensory/: macro.py  news.py  on_chain.py  sentiment.py
src/strategies/: alpha_strategy.py
tests/: conftest.py  test_scaffold.py
tests/test_core/: test_api_client.py  test_risk.py
tests/test_sensory/: test_macro.py  test_news.py  test_on_chain.py  test_sentiment.py
tests/test_strategies/: test_alpha_strategy.py
(+37 files in other folders)
