[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-edge"
version = "0.1.0"
description = "Multi-layer AI trading bot with autonomous strategy optimization"
requires-python = ">=3.11"
dependencies = [
    "freqtrade>=2024.1",
    "pycoingecko>=3.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "pandas-stubs>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [".venv"]

[[tool.mypy.overrides]]
module = [
    "freqtrade.*",
    "talib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
addopts = "-x --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that call external APIs",
]
